# alphalab

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
configs/alpha/: cross_sectional_momentum.yaml  mean_reversion.yaml  time_series_momentum.yaml
configs/backtest/: momo.yaml
configs/prompts/: README.md  batch_spec_generation.md  code_generation.md  factor_spec_generation.md  idea_generation.md  refinement_prompt.md  refinement_prompt.md.bak  refinement_prompt.md.bak2  seed_generation_prompt.md
configs/seeds/: premium_technical_seeds.json
configs/seeds/archive/20251101_213921_premium_macro/: premium_macro_seeds.json
configs/validate/: purged_kfold.yaml  walk_forward.yaml
examples/: README.md  llm_strategy_discovery.py  ml_alpha_walkforward.py  pairs_trading_backtest.py  personalized_strategy_discovery.py  simple_backtest.py  test_data_sources.py
scripts/: add_premium_seeds.py  add_seed_strategies.py  download_data.py  download_market_data.py  generate_experiment_visualizations.py  monitor_experiment.sh  run_comprehensive_experiments.py  run_comprehensive_experiments_ml.py
src/alphalab/: __init__.py  cli.py  config.py  protocols.py
src/alphalab/ai/: __init__.py  ablation.py  discovery.py  evaluator.py  generator.py  generator.py.bak2  generator.py.bak3  preferences.py  prompt_loader.py  robustness.py  spec_compiler.py  strategy_database.py
src/alphalab/alpha/: __init__.py  mean_reversion.py  ml.py  momentum.py  pairs.py
src/alphalab/backtest/: __init__.py  engine.py  metrics.py
src/alphalab/execution/: __init__.py  costs.py
src/alphalab/features/: __init__.py  core.py  pipeline.py
src/alphalab/portfolio/: __init__.py  optimizers.py  risk.py
src/alphalab/report/: __init__.py  html.py  json_export.py
src/alphalab/signals/: __init__.py  converters.py
src/alphalab/utils/: config.py
src/alphalab/validate/: __init__.py  purged_kfold.py  walkforward.py
tests/: README.md  __init__.py  test_alpha.py  test_backtest_comprehensive.py  test_backtest_equity_conservation.py  test_backtesting_issues.py  test_config.py  test_lofo_integration.py  test_lofo_stress.py  test_stress_alpha.py  test_stress_backtest.py  test_stress_portfolio.py  test_template_escaping.py  test_validation.py
